--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,13 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Ћирилизатор",
     "description": "Претвара латиничне стране у ћириличне.",
     "author": "Јован Турањанин",
-    "version": "2.4",
+    "version": "3.0",
     "background": {
-        "scripts": [
-            "background.js"
-        ]
+        "service_worker": "background.js"
     },
-    "browser_action": {
+    "action": {
         "default_icon": {
             "16": "icons/icon-off-16.png",
             "32": "icons/icon-off-32.png",
@@ -24,12 +22,21 @@
         "48": "icons/icon-on-48.png",
         "128": "icons/icon-on-128.png"
     },
+    "declarative_net_request": {
+        "rule_resources" : [{
+            "id": "map",
+            "enabled": true,
+            "path": "latin-cyrillic-domains.json"
+        }]
+    },
     "permissions": [
-        "<all_urls>",
+        "declarativeNetRequestWithHostAccess",
+        "scripting",
         "storage",
-        "tabs",
-        "webRequest",
-        "webRequestBlocking"
+        "tabs"
+    ],
+    "host_permissions": [
+        "<all_urls>"
     ],
     "browser_specific_settings": {
         "gecko": {
