--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -3,7 +3,7 @@
     "name": "Ћирилизатор",
     "description": "Претвара латиничне стране у ћириличне.",
     "author": "Јован Турањанин",
-    "version": "3.0",
+    "version": "3.1",
     "background": {
         "service_worker": "scripts/background.js"
     },
@@ -15,6 +15,13 @@
             "128": "icons/icon-off-128.png"
         },
         "default_title": "Ћирилизуј"
+    },
+    "commands": {
+        "_execute_action": {
+            "suggested_key": {
+                "default": "Ctrl + Shift + Space"
+            }
+        }
     },
     "icons": {
         "16": "icons/icon-on-16.png",
