--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -3,7 +3,7 @@
     "name": "Ћирилизатор",
     "description": "Претвара латиничне стране у ћириличне.",
     "author": "Јован Турањанин",
-    "version": "3.0",
+    "version": "3.1",
     "background": {
         "scripts": ["scripts/background.js"]
     },
@@ -14,7 +14,15 @@
             "48": "icons/icon-off-48.png",
             "128": "icons/icon-off-128.png"
         },
-        "default_title": "Ћирилизуј"
+        "default_title": "Ћирилизуј",
+        "default_area": "navbar"
+    },
+    "commands": {
+        "_execute_action": {
+            "suggested_key": {
+                "default": "Ctrl + Shift + Space"
+            }
+        }
     },
     "icons": {
         "16": "icons/icon-on-16.png",
